# rogue

./: .gitignore  BUILDS.md  Makefile  TODO.md  build.py  build_files.py  build_release.py  check.py  config  config.py  roguelike.html
assets/: build_complete_assets.py  selections.json
docs/: 2026-05-21-death-funnel-second-wind-design.md  2026-05-21-death-funnel-second-wind-plan.md
gettingout/: .gitignore  GOAuth.js  GOContactList.js  GOContactSearch.js  GOMessaging.js  gettingout.js  package-lock.json  package.json  vpnSession.js  whitelist.txt
mobile/: Makefile  README-INSTALL.md  manifest.json  sw.js
rogue/: .gitidentity  .gitignore  BUILDS.md  Makefile  TODO.md  assets.example.json  build.py  build_assets.py  build_files.py  build_html.py  build_release.py  check.py  lint.py  pyrightconfig.json  quips.txt  roguelike.html
util/flying-dragon/: Cargo.toml  README.md  build-run-web.sh
util/flying-dragon/src/: app.rs  lib.rs  main.rs
util/flying-dragon/src/assets/: dragon-low.glb
util/flying-dragon/src/geometry/: mesh.rs  mod.rs  plane.rs  vertex.rs
util/flying-dragon/src/material/: mod.rs  shader.rs  shader_dragon.rs  shader_dragon.wgsl  shader_fire.rs  shader_fire.wgsl  shader_lit.rs  shader_lit.wgsl  shader_unlit.rs
util/flying-dragon/src/world/: camera.rs  light.rs  mod.rs  node.rs  renderer.rs
util/flying-dragon/web/: index.html
util/flying-dragon/web-bundler/: flying-dragon.d.ts  flying-dragon.js  flying-dragon_bg.js  flying-dragon_bg.wasm  flying-dragon_bg.wasm.d.ts
util/flying-dragon/web-no-modules/: flying-dragon.d.ts  flying-dragon.js
(+275 files in other folders)
