[package]
name = "flying-dragon"
version = "0.5.0"
edition = "2024"

[dependencies]
winit = "0.30.7"
log = "0.4"
wgpu = "27.0"
bytemuck = { version = "1.21", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }
tobj = "4.0"
splines = { version = "5.0", features = ["glam"] }
fern = "0.7"
rand = "0.9.2"
egui = "0.33"
egui-wgpu = "0.33"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.33"
env_logger = "0.10"
pollster = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { version = "0.33", default-features = false, features = ["bytemuck"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-time = "1.1"
console_log = "1.0.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
